<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backColor"
    android:orientation="vertical"
    android:gravity="center"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            >

            <include layout="@layout/header_image_titr"
                android:id="@+id/header"
                />


            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/requestCodeRecevied"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_marginTop="32dp"
                android:textColor="@color/white"
                android:layout_below="@+id/header"
                />

            <LinearLayout
                android:id="@+id/linearInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/curve_bg_white"
                android:layout_below="@+id/text1"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/fragment_codeRequest_editCodeRequest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"
                    android:inputType="number"
                    />

            </LinearLayout>

            <RelativeLayout
                android:layout_below="@+id/linearInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                >

                <TextView
                    android:id="@+id/text_dont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dontGiveRequestCode"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giveRequestCode"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_below="@id/text_dont"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/gray_200"
                    />


            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/fragment_register_Btn_register2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/realRequestCode"
            android:background="@color/bottomBarColor"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>
</LinearLayout>